move style link to head element

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<title>PWAChat</title>
 	<link rel="stylesheet" type="text/css" href="sources/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="sources/css/main.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" >
 </head>
 <body>
-	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="container">
 
     <!-- Page header start -->
