add placeholders to login form

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                         </div>
                     </div>
                     <div v-else>
-                        <input type="text" name="id" v-model="id" class="form-control">
-                        <input type="password" name="password" v-model="password" class="form-control">
+                        <input type="text" name="id" v-model="id" class="form-control" placeholder="login">
+                        <input type="password" name="password" v-model="password" class="form-control" placeholder="heslo">
                         <button type="button" class="btn btn-primary" name="login" v-on:click="login()">Přihlásit se</button>
                         <h6>Dostupné loginy pro testování</h6>
                         <ol>
